--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "boxicons": "^2.1.2",
+    "card-validator": "^8.1.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.3",
+    "react-multistep": "^5.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.1",
